Terraform-AWS-EKS/03-tf-loops-metaarguements-functions/03-01-tf-manifests/c5-ec2instance.tf
# EC2 Instance

/*resource "aws_instance" "myec2vm" {
  ami = data.aws_ami.amzlinux2.id
  instance_type = var.instance_type
  user_data = file("${path.module}/app1-install.sh")
  key_name = var.instance_keypair
  vpc_security_group_ids = [ aws_security_group.vpc-ssh.id, aws_security_group.vpc-web.id   ]
  # Create EC2 Instance in all Availabilty Zones of a VPC  
  #for_each = toset(data.aws_availability_zones.my_azones.names)
  for_each = toset(keys({for az, details in data.aws_ec2_instance_type_offerings.my_ins_type: 
    az => details.instance_types if length(details.instance_types) != 0 }))
  availability_zone = each.key # You can also use each.value because for list items each.key == each.value
  tags = {
    "Name" = "For-Each-Demo-${each.key}"
  }
}
*/
resource "aws_instance" "webserver" {
  ami = data.aws_ami.amz2ami.id
  instance_type = var.instance_type
  user_data = file("${path.module}/userdata.sh")
  vpc_security_group_ids = [aws_security_group.allow_http_ssh.id]
  for_each = toset(keys({for az, t in data.aws_ec2_instance_type_offerings.instance_type: 
    az => t.instance_types if length(t.instance_types) != 0 }))
  availability_zone = each.key
  tags = {
    "Name" = "Webserver@${each.key}"
  }
}
